--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -103,6 +103,9 @@
         android:layout_height="0dp"
         android:padding="10dp"
         android:layout_marginStart="30dp"
+        tools:listitem="@layout/comments_row"
+        tools:itemCount="6"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_marginEnd="30dp"
         app:layout_constraintTop_toBottomOf="@+id/likeCommLay"
         app:layout_constraintBottom_toTopOf="@+id/commentLay"
@@ -155,7 +158,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailsLay"
         app:layout_constraintVertical_bias="0.569"
-        tools:src="@drawable/like1" />
+        app:srcCompat="@drawable/like1" />
     <LinearLayout
         android:id="@+id/barLay"
         android:layout_width="match_parent"
@@ -178,7 +181,7 @@
             android:textSize="25dp" />
 
         <ImageView
-            android:id="@+id/profileBtn"
+            android:id="@+id/homeBtn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_weight="1"
