--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
             android:background="@drawable/frame_style"
             android:onClick="onClick"
             android:textAllCaps="false"
+            android:visibility="invisible"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="17dp"
@@ -88,6 +89,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="20dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/postsRv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
