--- a/app/src/main/res/drawable/layout_style.xml
+++ b/app/src/main/res/drawable/layout_style.xml
@@ -2,7 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="8dp"/>
-
+    <stroke
+        android:color="@color/co4"
+        android:width="2dp"
+        />
     <gradient
         android:angle="224"
         android:startColor="@color/co1"
