--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_weight="2"
-        android:text="Main Activity"
+        android:text="Kotlin Knights App"
         android:textColor="@color/white"
         android:textSize="25dp" />
         <ImageView
