--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -62,6 +62,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="20dp"
+                                android:textSize="20dp"
+                                android:textStyle="bold"
                                 android:hint="Write your title here" />
                         </LinearLayout>
                     </ScrollView>
@@ -103,6 +105,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="20dp"
+                        android:textSize="18dp"
                         android:hint="Write your post here" />
                 </LinearLayout>
             </ScrollView>
