--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -54,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:hint="Enter your name"
                 />
 
 
@@ -98,6 +99,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:inputType="textEmailAddress"
+                android:hint="Enter your email"
+
                 />
             <TextView
                 android:id="@+id/emailConstrain"
@@ -134,6 +137,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:hint="Enter your image URL"
                         />
 
                 </LinearLayout>
@@ -161,7 +165,9 @@
                         android:id="@+id/webEt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp" />
+                        android:layout_margin="10dp"
+                        android:hint="Enter your website link"
+                        />
 
                 </LinearLayout>
                 <TextView
@@ -198,6 +204,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
+                                android:hint="Write something about you"
+
                                 />
                         </LinearLayout>
                     </ScrollView>
@@ -213,7 +221,8 @@
                     android:textColor="@color/white"
                     android:layout_marginTop="10dp"
             android:textStyle="bold"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+                    />
 
         <LinearLayout
             android:id="@+id/passLay"
@@ -228,7 +237,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:password="true" />
+                android:password="true"
+                android:hint="Enter your password "
+                />
             <TextView
                 android:id="@+id/passwordConstrain"
                 android:layout_margin="3dp"
@@ -269,6 +280,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:inputType="textPassword"
+                android:hint="Confirm your password"
+
                 />
         </LinearLayout>
 
