--- a/app/src/main/res/layout/comments_row.xml
+++ b/app/src/main/res/layout/comments_row.xml
@@ -22,7 +22,7 @@
             android:id="@+id/commentsTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Comments"
+            android:text=""
             android:textSize="20dp"
             android:textColor="@color/white"
             android:textStyle="bold" />
