--- a/app/src/main/res/layout/posts_row.xml
+++ b/app/src/main/res/layout/posts_row.xml
@@ -22,7 +22,8 @@
             android:id="@+id/nameTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="22dp"
+            android:textColor="@color/co4"
             android:textStyle="bold" />
 
 
@@ -30,20 +31,25 @@
             android:id="@+id/postsLay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
             <TextView
                 android:id="@+id/commentTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/co4"
+
                 />
 
             <TextView
                 android:id="@+id/likesTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/co4"
+                />
         </LinearLayout>
 
         <TextView
